--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,4 @@ thiserror = "1"
 tokio = "1"
 tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
 tonic-build = "0.10.2"
+solana-ledger = "2.0.13"
