--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ jito-protos = { path = "jito_protos" }
 log = "0.4.17"
 prost = "0.12"
 prost-types = "0.12"
-protobuf-src = "2"
+protobuf-src = "1.1.0+21.5"
 rand = "0.8"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde_json = "1"
@@ -45,4 +45,5 @@ thiserror = "1"
 tokio = "1"
 tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
 tonic-build = "0.10.2"
-solana-ledger = "2.0.13"
+solana-ledger = "1.18"
+tempfile = "3.13.0"
