--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -35,3 +35,11 @@ thiserror = { workspace = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
 solana-ledger = { workspace = true }
+tempfile = { workspace = true }
+
+[dependencies.rocksdb]
+# Avoid the vendored bzip2 within rocksdb-sys that can cause linker conflicts
+# when also using the bzip2 crate
+version = "0.21.0"
+default-features = false
+features = ["lz4"]
